# cookie-cutter-kodexa-infer-model

./: README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/: README.md  kodexa.yml  makefile  pyproject.toml
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: __init__.py  model.py  {{cookiecutter.pkg_name}}.py
